--- a/public/index.html
+++ b/public/index.html
@@ -230,13 +230,13 @@
     <script>
      // Your Firebase configuration
      var firebaseConfig = {
-        apiKey: "YOUR_API_KEY",
-        authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-        databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com",
-        projectId: "YOUR_PROJECT_ID",
-        storageBucket: "YOUR_PROJECT_ID.appspot.com",
-        messagingSenderId: "YOUR_SENDER_ID",
-        appId: "YOUR_APP_ID"
+        apiKey: "AIzaSyD3pj9dFg8VDblNoDDq50PUSyrPVSRNZv0",
+        authDomain: "ski-gameryanyou.firebaseapp.com",
+        databaseURL: "https://ski-gameryanyou-default-rtdb.firebaseio.com",
+        projectId: "ski-gameryanyou",
+        storageBucket: "ski-gameryanyou.firebasestorage.app",
+        messagingSenderId: "616326505701",
+        appId: "1:616326505701:web:580a7db1919c3d9d68a00c"
      };
      // Initialize Firebase
      firebase.initializeApp(firebaseConfig);
