Added new model

--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,15 @@
      firebase.initializeApp(firebaseConfig);
     </script>
 
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "https://unpkg.com/three@0.157.0/build/three.module.js",
+            "three/examples/jsm/": "https://unpkg.com/three@0.157.0/examples/jsm/"
+        }
+    }
+    </script>
+
     <!-- Main JavaScript file -->
     <script type="module" src="main.js"></script>
 </body>
